Using Java 11 http client